erDiagram
    USER ||--o{ PROJECT : hosts
    USER ||--o{ CONTRIBUTION : contributes
    USER ||--o{ CREDIT_LEDGER_ENTRY : receives
    USER ||--o{ USER_BADGE : earns

    PROJECT ||--o{ CONTRIBUTION : "has"
    PROJECT ||--o{ PROJECT_TAG_MAP : "tagged with"
    PROJECT ||--o{ PROJECT_RESOURCE : "includes"
    PROJECT ||--o{ PROJECT_NOTE : "contains"
    PROJECT ||--o{ CHAT_MESSAGE : "discussed in"
    PROJECT ||--o{ CREDIT_LEDGER_ENTRY : "awards from"

    PROJECT_TAG ||--o{ PROJECT_TAG_MAP : "used in"

    CONTRIBUTION ||--o| CREDIT_LEDGER_ENTRY : "awarded via"
    CONTRIBUTION }o--|| USER : "decided by"

    BADGE ||--o{ USER_BADGE : "awarded as"

    USER {
        uuid id PK
        string email UK "USERNAME_FIELD"
        string display_name
        boolean email_verified
        datetime email_verified_at
        jsonb reputation_data "레벨, XP, 품질 점수"
        boolean is_deleted "GDPR 소프트 삭제"
        datetime deletion_requested_at
        datetime data_anonymized_at
    }

    PROJECT {
        uuid id PK
        uuid host_user_id FK
        string title
        text description
        text what_it_does
        text desired_outputs
        string status "draft|open|closed"
        string difficulty "easy|intermediate|advanced"
        tsvector search_vector "GIN 인덱스"
        boolean is_ai_generated
    }

    CONTRIBUTION {
        uuid id PK
        uuid project_id FK
        uuid contributor_user_id FK
        uuid decided_by_user_id FK "nullable"
        string status "pending|accepted|declined"
        datetime decided_at "nullable"
        text body
        jsonb links_json
        jsonb attachments_json
    }

    CREDIT_LEDGER_ENTRY {
        uuid id PK
        uuid to_user_id FK
        uuid project_id FK
        uuid contribution_id FK
        uuid created_by_user_id FK
        int amount "default=1"
        string entry_type "award|reversal|adjustment"
        datetime created_at "IMMUTABLE"
    }

    PROJECT_TAG {
        uuid id PK
        string name UK "normalized lowercase"
    }

    PROJECT_TAG_MAP {
        uuid id PK
        uuid project_id FK
        uuid tag_id FK
    }

    BADGE {
        uuid id PK
        string name UK
        string tier "bronze|silver|gold|platinum"
        jsonb criteria "unlock conditions"
        boolean is_secret
    }

    USER_BADGE {
        uuid id PK
        uuid user_id FK
        uuid badge_id FK
        datetime earned_at
        int progress
    }

    CHAT_MESSAGE {
        uuid id PK
        uuid project_id FK
        uuid sender_user_id FK
        text message
        datetime created_at
    }

    PROJECT_RESOURCE {
        uuid id PK
        uuid project_id FK
        string title
        string url
        string resource_type "link|file|doc"
    }

    PROJECT_NOTE {
        uuid id PK
        uuid project_id FK
        uuid author_user_id FK
        text content
        datetime created_at
    }
